add changes to the project

--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
         <ul>
             <li>
                 <a href="index.html">Acasa</a>
-                <a id="product-list" href="product-list.html">Lista de produse</a>
                 <a id='add-product' href="new-product.html">Adauga produs</a>
-                <a href="favorite-products.html">Produsul favorit</a>
-                <a onclick="storeFavoriteProducts()" id="most-wanted-products" href="most-wanted-products.html">Cele mai
-                    cautate produse</a>
             </li>
         </ul>
     </nav>
@@ -72,8 +68,8 @@
 <footer>
 </footer>
 
-<script src="script.js"></script>
-<script src="new-product.js"></script>
+<script type="module" src="script.js"></script>
+<script type="module" src="new-product.js"></script>
 <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
 </body>
 
